--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,8 @@ jobs:
         
       - name: update the conductor tap
         run: |
-            git clone https://github.com/conduktor/homebrew-brew.git
-            cd homebrew-tmp/Casks/
+            git clone https://github.com/golopupinsky/homebrew-brew.git
+            cd homebrew-brew/Casks/
             awk -i inplace 'NR==2{print "  version \"2.16\""; next}1' conduktor.rb
             awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
             git add conduktor.rb
