--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,9 @@ jobs:
             awk -i inplace 'NR==2{print "  version \"2.16\""; next}1' conduktor.rb
             awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
             git add conduktor.rb
-            git push
+            git commit -m "Version bump"
+            git push https://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@github.com/golopupinsky/homebrew-brew.git
+
 
             
 
