--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,8 @@ jobs:
       - name: update the conductor tap
         run: |
             git clone https://github.com/golopupinsky/homebrew-brew.git
+            git config user.email "golopupinsky@gmail.com"
+            git config user.name "golopupinsky"
             ls
             cd homebrew-brew/Casks/
             awk -i inplace 'NR==2{print "  version \"2.16\""; next}1' conduktor.rb
