--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,5 +67,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: "main"
+          directory: "homebrew-brew"
 
             #git push https://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@github.com/golopupinsky/homebrew-brew.git
