--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,6 @@ jobs:
           github_token: ${{ secrets.PAT }}
           branch: "main"
           directory: "homebrew-brew"
-          repository: "homebrew-brew"
+          repository: "golopupinsky/homebrew-brew"
 
             #git push https://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@github.com/golopupinsky/homebrew-brew.git
