--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.PAT }}
+          github_token: "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"
           branch: "main"
           directory: "homebrew-brew"
           repository: "golopupinsky/homebrew-brew"
