--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,13 +62,15 @@ jobs:
             awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
             git add conduktor.rb
             git commit -m "Version bump"
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: "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"
-          branch: "main"
-          directory: "homebrew-brew"
-          repository: "golopupinsky/homebrew-brew"
+            git push https://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@github.com/golopupinsky/homebrew-brew.git
+
+#       - name: Push changes
+#         uses: ad-m/github-push-action@master
+#         with:
+#           github_token: "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"
+#           branch: "main"
+#           directory: "homebrew-brew"
+#           repository: "golopupinsky/homebrew-brew"
           
 
             #git push https://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@github.com/golopupinsky/homebrew-brew.git
