--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
             awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
             git add conduktor.rb
             git commit -m "Version bump"
-            git push https://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@github.com/golopupinsky/homebrew-brew.git
+            git push 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@github.com:golopupinsky/homebrew-tmp.git
 
 #       - name: Push changes
 #         uses: ad-m/github-push-action@master
@@ -73,4 +73,4 @@ jobs:
 #           repository: "golopupinsky/homebrew-brew"
           
 
-            #git push https://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@github.com/golopupinsky/homebrew-brew.git
+#git push https://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@github.com/golopupinsky/homebrew-brew.git
