--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
             ssh-add - <<< "${{ secrets.SECRET }}"
             git config --global user.email "golopupinsky@gmail.com"
             git config --global user.name "golopupinsky"
-            git clone https://github.com/golopupinsky/homebrew-brew.git
+            git clone git@github.com:golopupinsky/homebrew-brew.git
             ls
             cd homebrew-brew/Casks/
             awk -i inplace 'NR==2{print "  version \"2.16\""; next}1' conduktor.rb
