--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,9 @@ jobs:
       - id: shastep
         name: set sha output
         run: | 
-            SHA=$(shasum -a 256 ${{ github.workspace }}/Casks/conduktor.rb | head -c 64)
+            FILENAME=${{ github.workspace }}/Casks/conduktor.rb
+            
+            SHA=$(shasum -a 256 $FILENAME | head -c 64)
             echo "::set-output name=sha::$SHA"
    
       - name: get output
@@ -53,17 +55,18 @@ jobs:
         
       - name: update the conductor tap
         run: |
+            TAP_REPO_SSH_URL=git@github.com:golopupinsky/homebrew-brew.git
+            VERSION="2.16"
+            SHA="${{ steps.shastep.outputs.sha }}"
+            
             eval `ssh-agent -s`
             ssh-add - <<< "${{ secrets.SECRET }}"
-            git config --global user.email "golopupinsky@gmail.com"
-            git config --global user.name "golopupinsky"
-            git clone git@github.com:golopupinsky/homebrew-brew.git
-            ls
+            git clone TAP_REPO_SSH_URL
             cd homebrew-brew/Casks/
-            awk -i inplace 'NR==2{print "  version \"2.16\""; next}1' conduktor.rb
-            awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
+            awk -i inplace 'NR==2{print "  version $VERSION"; next}1' conduktor.rb
+            awk -i inplace 'NR==3{print "  sha256 $SHA"; next}1' conduktor.rb
             git add conduktor.rb
-            git commit -m "Version bump"
+            git commit -m "Version updated to $VERSION"
             git push 
 #       - name: Push changes
 #         uses: ad-m/github-push-action@master
