--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,8 +56,8 @@ jobs:
       - name: update the conductor tap
         run: |
             TAP_REPO_SSH_URL=git@github.com:golopupinsky/homebrew-brew.git
-            VERSION="2.16.3"
-            SHA="${{ steps.shastep.outputs.sha }}"
+            VERSION=2.16.3
+            SHA=${{ steps.shastep.outputs.sha }}
             
             eval `ssh-agent -s`
             ssh-add - <<< "${{ secrets.SECRET }}"
@@ -65,8 +65,8 @@ jobs:
             git config --global user.name "golopupinsky"
             git clone $TAP_REPO_SSH_URL
             cd homebrew-brew/Casks/
-            awk -i inplace 'NR==2{print "  version $VERSION"; next}1' conduktor.rb
-            awk -i inplace 'NR==3{print "  sha256 $SHA"; next}1' conduktor.rb
+            awk -i inplace 'NR==2{print "  version \"$VERSION\""; next}1' conduktor.rb
+            awk -i inplace 'NR==3{print "  sha256 \"$SHA\""; next}1' conduktor.rb
             git add conduktor.rb
             git commit -m "Version updated to $VERSION"
             git push 
