--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
             git config --global user.name "golopupinsky"
             git clone $TAP_REPO_SSH_URL
             cd homebrew-brew/Casks/
-            awk -i inplace 'NR==2{print "  version \"$VERSION\""; next}1' conduktor.rb
-            awk -i inplace 'NR==3{print "  sha256 \"$SHA\""; next}1' conduktor.rb
+            awk -i inplace 'NR==2{print "  version \"123\""; next}1' conduktor.rb
+            awk -i inplace 'NR==3{print "  sha256 \"${{ steps.shastep.outputs.sha }}\""; next}1' conduktor.rb
             git add conduktor.rb
             git commit -m "Version updated to $VERSION"
             git push 
